// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VisitorsTab should avoid assign when Synchronizing 1`] = `
<div>
  <div>
    <div
      class="makeStyles-filterActionsContainer-2630 makeStyles-filterActionsContainerPadding-2632"
    >
      <div
        class="MuiBox-root MuiBox-root-2786 makeStyles-filterStatusContainer-2633 makeStyles-autocompleteFilterStatus-2650"
      >
        <div
          class="makeStyles-floatingFilterWrapper-2639 makeStyles-filterWrapper-2638  floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-2640"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-2648"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Entities
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-2642"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-2660 makeStyles-primaryButtonLarge-2662 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-create-badge-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Create Badges
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <table
      aria-label="visitor-badge-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root makeStyles-fontHeadAccent-2649 MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Badge ID
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Badge Code
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Visitor Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Entity
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Status
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-2799 makeStyles-visitorRow-2768"
          data-testid="visitor-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Badge 
            10
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            FD 60 IL
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Name 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-visitorRowLastCell-2759"
            >
              <span
                class="makeStyles-visitorRowStatusChip-2760"
              >
                <div
                  class="MuiChip-root makeStyles-statusChip-2787 makeStyles-assigned-2791 MuiChip-colorPrimary"
                >
                  <span
                    class="MuiChip-label"
                  >
                    Assigned
                  </span>
                </div>
              </span>
              <div
                class="makeStyles-visitorRowIconsWrapper-2752"
              >
                <span
                  class=""
                  data-testid="controlled-button"
                  tabindex="-1"
                >
                  <button
                    aria-label="badge-modal"
                    class="MuiButtonBase-root MuiIconButton-root"
                    data-testid="open-visitor-badge-modal"
                    tabindex="0"
                    title="Revoked"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        class="makeStyles-projectRowIcon-2753"
                      >
                        badge-revoked.svg
                      </svg>
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-2799 makeStyles-visitorRow-2768"
          data-testid="visitor-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Badge 
            18
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            WD 78 XZ
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Name 3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            company 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-visitorRowLastCell-2759"
            >
              <span
                class="makeStyles-visitorRowStatusChip-2760"
              >
                <div
                  class="MuiChip-root makeStyles-statusChip-2787 makeStyles-active-2793 MuiChip-colorPrimary"
                >
                  <span
                    class="MuiChip-label"
                  >
                    Available
                  </span>
                </div>
              </span>
              <div
                class="makeStyles-visitorRowIconsWrapper-2752"
              >
                <span
                  class=""
                  data-testid="controlled-button"
                  tabindex="-1"
                >
                  <button
                    aria-label="badge-modal"
                    class="MuiButtonBase-root MuiIconButton-root"
                    data-testid="open-visitor-badge-modal"
                    tabindex="0"
                    title="Active"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        class="makeStyles-projectRowIcon-2753"
                      >
                        badge-active.svg
                      </svg>
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-2799 makeStyles-visitorRow-2768"
          data-testid="visitor-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Badge 
            32
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            EO 14 BW
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Name 4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            entity name
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-visitorRowLastCell-2759"
            >
              <span
                class="makeStyles-visitorRowStatusChip-2760"
              >
                <div
                  class="MuiChip-root makeStyles-statusChip-2787 makeStyles-assigned-2791 MuiChip-colorPrimary"
                >
                  <span
                    class="MuiChip-label"
                  >
                    Assigned
                  </span>
                </div>
              </span>
              <div
                class="makeStyles-visitorRowIconsWrapper-2752"
              >
                <span
                  class=""
                  data-testid="controlled-button"
                  tabindex="-1"
                >
                  <button
                    aria-label="badge-modal"
                    class="MuiButtonBase-root MuiIconButton-root"
                    data-testid="open-visitor-badge-modal"
                    tabindex="0"
                    title="Revoked"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        class="makeStyles-projectRowIcon-2753"
                      >
                        badge-revoked.svg
                      </svg>
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-2799 makeStyles-visitorRow-2768"
          data-testid="visitor-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Badge 
            34
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          />
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          />
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-visitorRowLastCell-2759"
            >
              <span
                class="makeStyles-visitorRowStatusChip-2760"
              >
                <div
                  class="MuiChip-root makeStyles-statusChip-2787 makeStyles-active-2793 MuiChip-colorPrimary"
                >
                  <span
                    class="MuiChip-label"
                  >
                    Available
                  </span>
                </div>
              </span>
              <div
                class="makeStyles-visitorRowIconsWrapper-2752"
              >
                <span
                  class=""
                  data-testid="controlled-button"
                  tabindex="-1"
                >
                  <button
                    aria-label="badge-modal"
                    class="MuiButtonBase-root MuiIconButton-root"
                    data-testid="open-visitor-badge-modal"
                    tabindex="0"
                    title="Active"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        class="makeStyles-badgeVipIcon-2754"
                      >
                        vip_active.svg
                      </svg>
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-2801"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
      </ul>
    </nav>
  </div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-2804 open"
    data-testid="badge-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-2805 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
    >
      <div
        class="makeStyles-drawerButtonWrapper-2807"
      >
        <div
          class="makeStyles-drawerButton-2808"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-2806"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-2809 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Badge Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-2834"
      >
        <div
          class="makeStyles-company-2835"
        >
          <div
            class="makeStyles-drawerText-2811"
          >
            <p
              class="MuiTypography-root makeStyles-listAccent-2836 makeStyles-entityTitle-2833 MuiTypography-body1"
            >
              Badge ID
            </p>
            <div
              class="makeStyles-drawerMainText-2812"
            >
              <span>
                #
                34
              </span>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-2810"
          >
            <span
              class="makeStyles-badgeVip-2803"
            >
              <svg>
                badge_vip.svg
              </svg>
            </span>
            <div
              class="makeStyles-drawerText-2811 makeStyles-drawerTextSeparation-2813"
            >
              <span
                class="makeStyles-listAccent-2836"
              >
                Badge Code
              </span>
              <span>
                -
              </span>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-2814"
        />
        <div
          class="makeStyles-ctaWrapper-2837"
        >
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-2667   Mui-disabled Mui-disabled"
              data-testid="assign-badgevisitor-btn"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Assign Badge
              </span>
            </button>
          </span>
        </div>
        <div
          class="makeStyles-isSynchronizingLegendContainer-2844"
        >
          <div>
            <svg>
              info.svg
            </svg>
          </div>
          <div
            class="makeStyles-isSynchronizingLegend-2845"
          >
            Actions are disabled at the moment, badge is being synchronized. Please wait a few minutes and refresh.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VisitorsTab should hide create badges when not FcAdmin 1`] = `
<div>
  <div>
    <div
      class="makeStyles-filterActionsContainer-858 makeStyles-filterActionsContainerPadding-860"
    >
      <div
        class="MuiBox-root MuiBox-root-1014 makeStyles-filterStatusContainer-861 makeStyles-autocompleteFilterStatus-878"
      >
        <div
          class="makeStyles-floatingFilterWrapper-867 makeStyles-filterWrapper-866  floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-868"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-876"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Entities
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-870"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <table
      aria-label="visitor-badge-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root makeStyles-fontHeadAccent-877 MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Badge ID
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Badge Code
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Visitor Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Entity
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Status
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-1027 makeStyles-visitorRow-996"
          data-testid="visitor-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Badge 
            10
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            FD 60 IL
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Name 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-visitorRowLastCell-987"
            >
              <span
                class="makeStyles-visitorRowStatusChip-988"
              >
                <div
                  class="MuiChip-root makeStyles-statusChip-1015 makeStyles-assigned-1019 MuiChip-colorPrimary"
                >
                  <span
                    class="MuiChip-label"
                  >
                    Assigned
                  </span>
                </div>
              </span>
              <div
                class="makeStyles-visitorRowIconsWrapper-980"
              >
                <span
                  class=""
                  data-testid="controlled-button"
                  tabindex="-1"
                >
                  <button
                    aria-label="badge-modal"
                    class="MuiButtonBase-root MuiIconButton-root"
                    data-testid="open-visitor-badge-modal"
                    tabindex="0"
                    title="Revoked"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        class="makeStyles-projectRowIcon-981"
                      >
                        badge-revoked.svg
                      </svg>
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-1027 makeStyles-visitorRow-996"
          data-testid="visitor-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Badge 
            18
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            WD 78 XZ
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Name 3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            company 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-visitorRowLastCell-987"
            >
              <span
                class="makeStyles-visitorRowStatusChip-988"
              >
                <div
                  class="MuiChip-root makeStyles-statusChip-1015 makeStyles-active-1021 MuiChip-colorPrimary"
                >
                  <span
                    class="MuiChip-label"
                  >
                    Available
                  </span>
                </div>
              </span>
              <div
                class="makeStyles-visitorRowIconsWrapper-980"
              >
                <span
                  class=""
                  data-testid="controlled-button"
                  tabindex="-1"
                >
                  <button
                    aria-label="badge-modal"
                    class="MuiButtonBase-root MuiIconButton-root"
                    data-testid="open-visitor-badge-modal"
                    tabindex="0"
                    title="Active"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        class="makeStyles-projectRowIcon-981"
                      >
                        badge-active.svg
                      </svg>
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-1027 makeStyles-visitorRow-996"
          data-testid="visitor-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Badge 
            32
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            EO 14 BW
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Name 4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            entity name
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-visitorRowLastCell-987"
            >
              <span
                class="makeStyles-visitorRowStatusChip-988"
              >
                <div
                  class="MuiChip-root makeStyles-statusChip-1015 makeStyles-assigned-1019 MuiChip-colorPrimary"
                >
                  <span
                    class="MuiChip-label"
                  >
                    Assigned
                  </span>
                </div>
              </span>
              <div
                class="makeStyles-visitorRowIconsWrapper-980"
              >
                <span
                  class=""
                  data-testid="controlled-button"
                  tabindex="-1"
                >
                  <button
                    aria-label="badge-modal"
                    class="MuiButtonBase-root MuiIconButton-root"
                    data-testid="open-visitor-badge-modal"
                    tabindex="0"
                    title="Revoked"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        class="makeStyles-projectRowIcon-981"
                      >
                        badge-revoked.svg
                      </svg>
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-1027 makeStyles-visitorRow-996"
          data-testid="visitor-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Badge 
            34
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          />
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          />
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-visitorRowLastCell-987"
            >
              <span
                class="makeStyles-visitorRowStatusChip-988"
              >
                <div
                  class="MuiChip-root makeStyles-statusChip-1015 makeStyles-active-1021 MuiChip-colorPrimary"
                >
                  <span
                    class="MuiChip-label"
                  >
                    Available
                  </span>
                </div>
              </span>
              <div
                class="makeStyles-visitorRowIconsWrapper-980"
              >
                <span
                  class=""
                  data-testid="controlled-button"
                  tabindex="-1"
                >
                  <button
                    aria-label="badge-modal"
                    class="MuiButtonBase-root MuiIconButton-root"
                    data-testid="open-visitor-badge-modal"
                    tabindex="0"
                    title="Active"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        class="makeStyles-badgeVipIcon-982"
                      >
                        vip_active.svg
                      </svg>
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-1029"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
      </ul>
    </nav>
  </div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-1032 makeStyles-close-1043 closed"
    data-testid="badge-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-1033 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-1035"
      >
        <div
          class="makeStyles-drawerButton-1036"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-1034"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-1037 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Badge Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-1062"
      >
        <div
          class="makeStyles-company-1063"
        >
          <div
            class="makeStyles-drawerText-1039"
          >
            <p
              class="MuiTypography-root makeStyles-listAccent-1064 makeStyles-entityTitle-1061 MuiTypography-body1"
            >
              Badge ID
            </p>
            <div
              class="makeStyles-drawerMainText-1040"
            >
              <span>
                #
              </span>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-1038"
          >
            <svg>
              e-badge.svg
            </svg>
            <div
              class="makeStyles-drawerText-1039 makeStyles-drawerTextSeparation-1041"
            >
              <span
                class="makeStyles-listAccent-1064"
              >
                Badge Code
              </span>
              <span>
                -
              </span>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-1042"
        />
        <div
          class="makeStyles-ctaWrapper-1065"
        >
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-895 makeStyles-borderPrimaryButton-887 makeStyles-primaryButtonPadding-889"
              data-testid="assign-badgevisitor-btn"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Assign Badge
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VisitorsTab should open assign visitor badge modal 1`] = `
<div
  aria-hidden="true"
>
  <div>
    <div
      class="makeStyles-filterActionsContainer-1743 makeStyles-filterActionsContainerPadding-1745"
    >
      <div
        class="MuiBox-root MuiBox-root-1899 makeStyles-filterStatusContainer-1746 makeStyles-autocompleteFilterStatus-1763"
      >
        <div
          class="makeStyles-floatingFilterWrapper-1752 makeStyles-filterWrapper-1751  floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-1753"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-1761"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Entities
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-1755"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-1773 makeStyles-primaryButtonLarge-1775 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-create-badge-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Create Badges
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <table
      aria-label="visitor-badge-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root makeStyles-fontHeadAccent-1762 MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Badge ID
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Badge Code
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Visitor Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Entity
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Status
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-1912 makeStyles-visitorRow-1881"
          data-testid="visitor-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Badge 
            5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            QB 81 PG
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Name 2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-visitorRowLastCell-1872"
            >
              <span
                class="makeStyles-visitorRowStatusChip-1873"
              >
                <div
                  class="MuiChip-root makeStyles-statusChip-1900 makeStyles-active-1906 MuiChip-colorPrimary"
                >
                  <span
                    class="MuiChip-label"
                  >
                    Available
                  </span>
                </div>
              </span>
              <div
                class="makeStyles-visitorRowIconsWrapper-1865"
              >
                <span
                  class=""
                  data-testid="controlled-button"
                  tabindex="-1"
                >
                  <button
                    aria-label="badge-modal"
                    class="MuiButtonBase-root MuiIconButton-root"
                    data-testid="open-visitor-badge-modal"
                    tabindex="0"
                    title="Active"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        class="makeStyles-badgeVipIcon-1867"
                      >
                        vip_active.svg
                      </svg>
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-1914"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
      </ul>
    </nav>
  </div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-1917 open"
    data-testid="badge-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-1918 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
    >
      <div
        class="makeStyles-drawerButtonWrapper-1920"
      >
        <div
          class="makeStyles-drawerButton-1921"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-1919"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-1922 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Badge Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-1947"
      >
        <div
          class="makeStyles-company-1948"
        >
          <div
            class="makeStyles-drawerText-1924"
          >
            <p
              class="MuiTypography-root makeStyles-listAccent-1949 makeStyles-entityTitle-1946 MuiTypography-body1"
            >
              Badge ID
            </p>
            <div
              class="makeStyles-drawerMainText-1925"
            >
              <span>
                #
                5
              </span>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-1923"
          >
            <span
              class="makeStyles-badgeVip-1916"
            >
              <svg>
                badge_vip.svg
              </svg>
            </span>
            <div
              class="makeStyles-drawerText-1924 makeStyles-drawerTextSeparation-1926"
            >
              <span
                class="makeStyles-listAccent-1949"
              >
                Badge Code
              </span>
              <span>
                QB 81 PG
              </span>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-1927"
        />
        <div
          class="makeStyles-ctaWrapper-1950"
        >
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-1780 makeStyles-borderPrimaryButton-1772 makeStyles-primaryButtonPadding-1774"
              data-testid="assign-badgevisitor-btn"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Assign Badge
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VisitorsTab should render 1`] = `
<div>
  <div>
    <div
      class="makeStyles-filterActionsContainer-408 makeStyles-filterActionsContainerPadding-410"
    >
      <div
        class="MuiBox-root MuiBox-root-564 makeStyles-filterStatusContainer-411 makeStyles-autocompleteFilterStatus-428"
      >
        <div
          class="makeStyles-floatingFilterWrapper-417 makeStyles-filterWrapper-416  floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-418"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-426"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Entities
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-420"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-438 makeStyles-primaryButtonLarge-440 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-create-badge-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Create Badges
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <table
      aria-label="visitor-badge-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root makeStyles-fontHeadAccent-427 MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Badge ID
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Badge Code
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Visitor Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Entity
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Status
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-577 makeStyles-visitorRow-546"
          data-testid="visitor-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Badge 
            10
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            FD 60 IL
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Name 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-visitorRowLastCell-537"
            >
              <span
                class="makeStyles-visitorRowStatusChip-538"
              >
                <div
                  class="MuiChip-root makeStyles-statusChip-565 makeStyles-assigned-569 MuiChip-colorPrimary"
                >
                  <span
                    class="MuiChip-label"
                  >
                    Assigned
                  </span>
                </div>
              </span>
              <div
                class="makeStyles-visitorRowIconsWrapper-530"
              >
                <span
                  class=""
                  data-testid="controlled-button"
                  tabindex="-1"
                >
                  <button
                    aria-label="badge-modal"
                    class="MuiButtonBase-root MuiIconButton-root"
                    data-testid="open-visitor-badge-modal"
                    tabindex="0"
                    title="Revoked"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        class="makeStyles-projectRowIcon-531"
                      >
                        badge-revoked.svg
                      </svg>
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-577 makeStyles-visitorRow-546"
          data-testid="visitor-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Badge 
            18
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            WD 78 XZ
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Name 3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            company 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-visitorRowLastCell-537"
            >
              <span
                class="makeStyles-visitorRowStatusChip-538"
              >
                <div
                  class="MuiChip-root makeStyles-statusChip-565 makeStyles-active-571 MuiChip-colorPrimary"
                >
                  <span
                    class="MuiChip-label"
                  >
                    Available
                  </span>
                </div>
              </span>
              <div
                class="makeStyles-visitorRowIconsWrapper-530"
              >
                <span
                  class=""
                  data-testid="controlled-button"
                  tabindex="-1"
                >
                  <button
                    aria-label="badge-modal"
                    class="MuiButtonBase-root MuiIconButton-root"
                    data-testid="open-visitor-badge-modal"
                    tabindex="0"
                    title="Active"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        class="makeStyles-projectRowIcon-531"
                      >
                        badge-active.svg
                      </svg>
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-577 makeStyles-visitorRow-546"
          data-testid="visitor-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Badge 
            32
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            EO 14 BW
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Name 4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            entity name
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-visitorRowLastCell-537"
            >
              <span
                class="makeStyles-visitorRowStatusChip-538"
              >
                <div
                  class="MuiChip-root makeStyles-statusChip-565 makeStyles-assigned-569 MuiChip-colorPrimary"
                >
                  <span
                    class="MuiChip-label"
                  >
                    Assigned
                  </span>
                </div>
              </span>
              <div
                class="makeStyles-visitorRowIconsWrapper-530"
              >
                <span
                  class=""
                  data-testid="controlled-button"
                  tabindex="-1"
                >
                  <button
                    aria-label="badge-modal"
                    class="MuiButtonBase-root MuiIconButton-root"
                    data-testid="open-visitor-badge-modal"
                    tabindex="0"
                    title="Revoked"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        class="makeStyles-projectRowIcon-531"
                      >
                        badge-revoked.svg
                      </svg>
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-577 makeStyles-visitorRow-546"
          data-testid="visitor-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Visitor Badge 
            34
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          />
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          />
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-visitorRowLastCell-537"
            >
              <span
                class="makeStyles-visitorRowStatusChip-538"
              >
                <div
                  class="MuiChip-root makeStyles-statusChip-565 makeStyles-active-571 MuiChip-colorPrimary"
                >
                  <span
                    class="MuiChip-label"
                  >
                    Available
                  </span>
                </div>
              </span>
              <div
                class="makeStyles-visitorRowIconsWrapper-530"
              >
                <span
                  class=""
                  data-testid="controlled-button"
                  tabindex="-1"
                >
                  <button
                    aria-label="badge-modal"
                    class="MuiButtonBase-root MuiIconButton-root"
                    data-testid="open-visitor-badge-modal"
                    tabindex="0"
                    title="Active"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        class="makeStyles-badgeVipIcon-532"
                      >
                        vip_active.svg
                      </svg>
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-579"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
      </ul>
    </nav>
  </div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-582 makeStyles-close-593 closed"
    data-testid="badge-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-583 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-585"
      >
        <div
          class="makeStyles-drawerButton-586"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-584"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-587 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Badge Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-612"
      >
        <div
          class="makeStyles-company-613"
        >
          <div
            class="makeStyles-drawerText-589"
          >
            <p
              class="MuiTypography-root makeStyles-listAccent-614 makeStyles-entityTitle-611 MuiTypography-body1"
            >
              Badge ID
            </p>
            <div
              class="makeStyles-drawerMainText-590"
            >
              <span>
                #
              </span>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-588"
          >
            <svg>
              e-badge.svg
            </svg>
            <div
              class="makeStyles-drawerText-589 makeStyles-drawerTextSeparation-591"
            >
              <span
                class="makeStyles-listAccent-614"
              >
                Badge Code
              </span>
              <span>
                -
              </span>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-592"
        />
        <div
          class="makeStyles-ctaWrapper-615"
        >
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-445 makeStyles-borderPrimaryButton-437 makeStyles-primaryButtonPadding-439"
              data-testid="assign-badgevisitor-btn"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Assign Badge
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VisitorsTab should render empty 1`] = `
<div>
  <div>
    <div
      class="makeStyles-filterActionsContainer-12 makeStyles-filterActionsContainerPadding-14"
    >
      <div
        class="MuiBox-root MuiBox-root-168 makeStyles-filterStatusContainer-15 makeStyles-autocompleteFilterStatus-32"
      >
        <div
          class="makeStyles-floatingFilterWrapper-21 makeStyles-filterWrapper-20  floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-22"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-30"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Entities
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-24"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-42 makeStyles-primaryButtonLarge-44 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-create-badge-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Create Badges
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="makeStyles-emptyTabBadgeIcon-149 makeStyles-container-169"
    >
      <div>
        <div
          class="MuiAvatar-root MuiAvatar-circle makeStyles-missingAvatarWrapper-180 makeStyles-missingAvatarBig-181 MuiAvatar-colorDefault"
        >
          <svg>
            e-badge.svg
          </svg>
        </div>
      </div>
      <p
        class="MuiTypography-root makeStyles-missingListText-170 MuiTypography-body1"
      >
        There are no Visitor Badges
      </p>
    </div>
  </div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-190 makeStyles-close-201 closed"
    data-testid="badge-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-191 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-193"
      >
        <div
          class="makeStyles-drawerButton-194"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-192"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-195 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Badge Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-220"
      >
        <div
          class="makeStyles-company-221"
        >
          <div
            class="makeStyles-drawerText-197"
          >
            <p
              class="MuiTypography-root makeStyles-listAccent-222 makeStyles-entityTitle-219 MuiTypography-body1"
            >
              Badge ID
            </p>
            <div
              class="makeStyles-drawerMainText-198"
            >
              <span>
                #
              </span>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-196"
          >
            <svg>
              e-badge.svg
            </svg>
            <div
              class="makeStyles-drawerText-197 makeStyles-drawerTextSeparation-199"
            >
              <span
                class="makeStyles-listAccent-222"
              >
                Badge Code
              </span>
              <span>
                -
              </span>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-200"
        />
        <div
          class="makeStyles-ctaWrapper-223"
        >
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-49 makeStyles-borderPrimaryButton-41 makeStyles-primaryButtonPadding-43"
              data-testid="assign-badgevisitor-btn"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Assign Badge
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VisitorsTab should render loading 1`] = `
<div>
  Loading...
</div>
`;
